# darvaza

./: CMakeLists.txt  README.md  build.bat  build.sh  build32.bat  generateModel.js
audio-unit/: CMakeLists.txt  Info.plist  audiounitconfig.h
mac/audio-unit/: CMakeLists.txt  audiounitconfig.h
resource/: plugin.rc  plugin.uidesc
resource/src/: design.psd
src/: bitcrusher.cpp  bitcrusher.h  calc.h  global.h  lowpassfilter.cpp  lowpassfilter.h  paramids.h  plugin_process.cpp  plugin_process.h  plugin_process.tcc  reverb.cpp  reverb.h  tablepool.cpp  tablepool.h  util.h  version.h  vst.cpp  vst.h  vstentry.cpp  waveforms.h  wavegenerator.cpp  wavegenerator.h  wavetable.cpp  wavetable.h
src/ui/: controller.cpp  uimessagecontroller.h
